[package]
name = "yew-ranged-value"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"
description = "a component for the yew web framework"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/strawlab/yew-ranged-value"

[dependencies]
yew = "0.17.4"
